# python-package-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: test-template.yml
hooks/: post_gen_project.py
tests/: README.md  conftest.py  requirements.txt  test_template_generation.py
{{cookiecutter.package_name}}/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
{{cookiecutter.package_name}}/.github/workflows/: ci.yml  code-quality.yml  docker.yml  docs.yml  documentation.yml  publish.yml  pypi-publish.yml
{{cookiecutter.package_name}}/docs/: api.md  index.md
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __init__.py  alpacas.py  cli.py  formatter.py
{{cookiecutter.package_name}}/tests/: test_alpacas.py  test_cli.py  test_formatter.py
